--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-scroll": "^1.9.0",
     "survey-react-ui": "^1.11.7"
   },
   "devDependencies": {
