--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,16 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@supabase/supabase-js": "^2.90.1",
+    "@types/three": "^0.182.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.556.0",
+    "motion": "^12.27.1",
     "next": "16.0.7",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "three": "^0.182.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/gsap": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
